// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxView renders RTL styling 1`] = `
<div
  className="CheckboxView-jJyWlI c-chk is-rtl ennyHB"
  data-garden-id="checkboxes.checkbox_view"
  data-garden-version="version"
/>
`;

exports[`CheckboxView renders default styling 1`] = `
<div
  className="CheckboxView-jJyWlI c-chk ennyHB"
  data-garden-id="checkboxes.checkbox_view"
  data-garden-version="version"
/>
`;
